# tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  django.yml
frontend/: middleware.ts  package-lock.json  package.json
frontend/src/: middleware.ts  wrapper.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Driver.tsx  driver.css  logEntries.tsx  map.tsx  sideGrid.tsx  topBox.tsx
frontend/src/hooks/: getCurrentUser.ts  getDrivers.ts  getLogs.ts  getTrips.ts  getVehicles.ts  index.ts
frontend/src/utils/: index.ts  session.ts
spotter/: settings.py  urls.py
spotter/settings/: base.py  development.py  production.py  serializers.py
tests/: test_api.py  test_geo_api.py  test_models.py
trucker/: admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  urls.py  validators.py  views.py
trucker/migrations/: 0001_initial.py  0002_alter_driver_user_alter_dutystatus_log_entry.py  0003_remove_driver_carrier_driver_carriers.py  0004_remove_dutystatus_location_dutystatus_latitude_and_more.py  0005_cyclecalculation_alter_dutystatus_options_and_more.py  0006_remove_logentry_duty_window_end_and_more.py  0007_trip.py  0008_trip_average_speed_stop.py  0009_trip_completed_trip_completed_at.py  0010_trip_vehicle.py  0011_alter_stop_location_lat_alter_stop_location_lon.py  0012_alter_stop_options_alter_trip_vehicle_and_more.py
trucker/services/: hos_services.py  route_services.py  stop_services.py
utils/: middlewares.py
(+17 files in other folders)
